--- a/Javascript calculator/index.html
+++ b/Javascript calculator/index.html
@@ -22,40 +22,42 @@
     <body>
         <div class="container">
             <form name="form" class="form">
-                <input class="textview" name="textview" disabled>
+                <input class="textviewInput" name="textviewInput" value="" id="displayInput" disabled>
+                <input class="textview" name="textview" value="0" id="display" disabled>
             </form>
             <table class="table" cellpadding="0" cellspacing="0">
                 <tr>
-                    <td><input type="button" value="AC"></td>
-                    <td><input type="button" value="/" class="operator"></td>
+                    <td><input type="button" value="AC" id="clear"></td>
+                    <td><input type="button" value="/" class="operator" id="divide"></td>
                 </tr>
                 <tr>
-                    <td><input type="button" value="7" class="number"></td>
-                    <td><input type="button" value="8" class="number"></td>
-                    <td><input type="button" value="9" class="number"></td>
-                    <td><input type="button" value="x" class="operator"></td>
+                    <td><input type="button" value="7" class="number" id="seven"></td>
+                    <td><input type="button" value="8" class="number" id="eight"></td>
+                    <td><input type="button" value="9" class="number" id="nine"></td>
+                    <td><input type="button" value="x" class="operator" id="multiply"></td>
                 </tr>
                 <tr>
-                    <td><input type="button" value="4" class="number"></td>
-                    <td><input type="button" value="5" class="number"></td>
-                    <td><input type="button" value="6" class="number"></td>
-                    <td><input type="button" value="-" class="operator"></td>
+                    <td><input type="button" value="4" class="number" id="four"></td>
+                    <td><input type="button" value="5" class="number" id="five"></td>
+                    <td><input type="button" value="6" class="number" id="six"></td>
+                    <td><input type="button" value="-" class="operator" id="subtract"></td>
                 </tr>
                 <tr>
-                    <td><input type="button" value="1" class="number"></td>
-                    <td><input type="button" value="2" class="number"></td>
-                    <td><input type="button" value="3" class="number"></td>
-                    <td><input type="button" value="+" class="operator"></td>
+                    <td><input type="button" value="1" class="number" id="one"></td>
+                    <td><input type="button" value="2" class="number" id="two"></td>
+                    <td><input type="button" value="3" class="number" id="three"></td>
+                    <td><input type="button" value="+" class="operator" id="add"></td>
                 </tr>
                 <tr>
-                    <td><input type="button" value="0" class="number"></td>
-                    <td><input type="button" value="." class="operator"></td>
-                    <td><input type="button" value="=" class="operator"></td>
+                    <td><input type="button" value="0" class="number" id="zero"></td>
+                    <td><input type="button" value="." class="operator" id="decimal"></td>
+                    <td><input type="button" value="=" class="operator" id="equals"></td>
                 </tr>
             </table>
         </div>
 
         <script src="node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="calculator.js"></script>
     </body>
 
 </html>
